# http_server

./: .gitignore  todo.txt
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/crypto/: passwords.rs
backend/api/src/network/: routing.rs
backend/api/src/network/responses/: get.rs  post.rs
backend/api/src/network/responses/get/: tools.rs
backend/api/src/network/routing/: static_source.rs
backend/api/src/users/: prelude.rs
backend/api/src/users/auth/: get.rs  post.rs
backend/api/src/users/user/: get.rs
backend/args/: Cargo.toml
backend/db/: Cargo.toml
backend/db/src/: connection.rs  lib.rs  models.rs  tools.rs
backend/rest_api_tests/: get.py  post.py  tests.py
backend/server/: Cargo.toml
backend/server/assets/: users.db
backend/server/src/: api.rs  args.rs  lib.rs  main.rs  redis.rs  server.rs  tools.rs
backend/server/src/api/: crypto.rs  handlers.rs  network.rs  routing.rs  session.rs  users.rs
backend/server/src/api/crypto/: password.rs  password_tests.rs  passwords_tests.rs  secret_key.rs
backend/server/src/api/crypto/passwords/: tests.rs
backend/server/src/api/handlers/: extractors.rs  prelude.rs  responses.rs  users.rs
backend/server/src/api/network/: handlers_utils.rs  routing.rs  session.rs
backend/server/src/api/network/responses/: get.rs  post.rs
backend/server/src/api/network/responses/post/: tools.rs
backend/server/src/api/network/routing/: static_source.rs
backend/server/src/api/routing/: static_source.rs
backend/server/src/api/users/: handlers.rs  prelude.rs
backend/server/src/api/users/auth/: get.rs  post.rs
backend/server/src/api/users/user/: get.rs
db/: .env  Cargo.toml
db/migrations/users/: up.sql
db/src/: lib.rs  models.rs  schema.rs  tools.rs
frontend/: error.html  index.html  login.html  register.html  user.html
frontend/script/: index.js
frontend/user/auth/style/: index.css  login-style.css  register.css  userpage.css
rest_api_tests/: get.py  post.py  run_tests.sh
server/: Cargo.toml
server/assets/: users.db
server/assets/front/: index.html  index.js  login.html  login.js  old_login.html  register.html  register.js  user.html  user.js
server/assets/front/style/: 404.css  index.css  login-style.css  register.css
server/assets/rest_api_tests/: get.py  post.py  run_tests.sh
server/assets/self-signed-certs/: cert.pem  key.pem
server/src/: args.rs  logger.rs  main.rs  network.rs  tools.rs
server/src/network/: get.rs  post.rs  tools.rs
server/src/network/post/: hash.rs  result.rs  session.rs  tools.rs
