[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
tower = "0.4.13"
hyper = "0.14.27"

serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing = "0.1.37"
time = { version = "0.3.25", features = ["macros"] }

db = { path = "../db" }
