[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Network
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
hyper = "0.14.27"

# Redis
redis = { version = "0.23.3", features = ["tokio-comp", "aio"] }

# Parsing
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

# Logging
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing = "0.1.37"
time = { version = "0.3.25", features = ["macros"] }

# Cryptography
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"

# Other
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
once_cell = "1.18.0"
# axum-macros = "0.3.8"

# Workspace
db = { path = "../db" }
